--- a/_config.yml
+++ b/_config.yml
@@ -1,30 +1,28 @@
 # Site settings
-title: Klise Theme # site title
+title: OPENALE 3.0 # site title
 description: >- # site description
-  He's writing in Bahasa about web technology and experience as a journal 
-  for documentation things that he learned, meet him <a href="https://github.com/piharpi" target="_blank" rel="noopener">@github</a>.
-lang: en-US # default lang
-timezone: Asia/Jakarta # set your timezone
+  Plataforma Educatica Informática
+lang: es-ES # default lang
+timezone: Europe/Madrid # set your timezone
 image: assets/img/ogp.png # This image used for Open Graph more info https://ogp.me/
 repo: https://github.com/piharpi/jekyll-klise # site repo [optional]
 mode: dark # default theme "dark" | "light"
 
 # Profile settings
 author:
-  name: Jekyll Klisé # author name
+  name: OPENALE 3.0 # author name
   bio: >- # tell to the world
-    The minimalist Jekyll theme, light and dark mode support, for running a personal site and blog, 
-    meet Klisé theme at <a href="https://github.com/piharpi/jekyll-klise" target="_blank" rel="noopener">@github</a>.
-  username: username # general username
-  github: github_username # github username
-  twitter: twitter_username # twitter username
-  facebook: facebook_username # facebook username
-  email: your-email@email.com # email adress
-  avatar: /assets/img/avatar.jpg # change with your own avatar
+    Proyecto de página web estática creada con Jekyll por Alejandro Herrera Jiménez para la asignatura de Implantación de Aplicaciones Web del curso de 2ºASIR del IES Gonzalo Nazareno.
+  username:
+  github: Alehache97 # github username
+  twitter: # twitter username
+  facebook: 
+  email: alejandro@gmail.com # email adress
+  avatar: /assets/img/primo.jpg # change with your own avatar
 
 # URL settings
 url: "https://klise.now.sh" #
-baseurl:
+baseurl: ""
 permalink: /:title/
 google_analytics: # leave it blank if not wish
 fb_appid:
