--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -1,12 +1,12 @@
-- title: home
+- title: Inicio
   url: /
   external: false
 
-- title: archive
+- title: Posts
   url: /archive/
   external: false
 
-- title: about
+- title: Sobre Mí
   url: /about/
   external: false # set true if you using external link, see below
 
